--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -49,25 +49,26 @@ Before sample preparation, the iron oxide nanoparticles as received were diluted
 
 \begin{figure}[tp]
 	\centering
-	\begin{subfigure}[b]{0.25\textwidth}
+	\begin{subfigure}[b]{0.3\textwidth}
 		\includegraphics[width=\linewidth]{images/tem5.png}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.25\textwidth}
+	\begin{subfigure}[b]{0.3\textwidth}
 		\includegraphics[width=\linewidth]{images/tem10.png}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.25\textwidth}
+	\begin{subfigure}[b]{0.3\textwidth}
 		\includegraphics[width=\linewidth]{images/tem20.png}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.25\textwidth}
+\par\smallskip
+	\begin{subfigure}[b]{0.3\textwidth}
 		\includegraphics[width=\linewidth]{images/temh5.png}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.25\textwidth}
+	\begin{subfigure}[b]{0.3\textwidth}
 		\includegraphics[width=\linewidth]{images/temh10.png}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.25\textwidth}
+	\begin{subfigure}[b]{0.3\textwidth}
 		\includegraphics[width=\linewidth]{images/temh20.png}
 	\end{subfigure}
-\caption{TEM images of the iron oxide nanoparticles. From left to right: 5\,nm 10\,nm and 20\,nm nominal size in two different magnifications each (rows).}
+\caption[TEM images of iron oxide nanoparticle]{TEM images of the iron oxide nanoparticles. From left to right: 5\,nm 10\,nm and 20\,nm nominal size in two different magnifications each (rows).}
 \label{fig:tem}
 \end{figure}
 .
@@ -89,7 +90,7 @@ The measurements do not show a clear and significant difference between the two 
 		\includegraphics[width=\linewidth]{images/ps20.pdf}
 	\end{subfigure}
 
-	\caption{SAXS profiles of nominal 5\,nm, 10\,nm and 20\,nm iron oxide nanoparticles in polystyrene matrix (left to right).}
+	\caption[SAXS profile of iron oxide nanoparticles in polystyrene matrix]{SAXS profiles of nominal 5\,nm, 10\,nm and 20\,nm iron oxide nanoparticles in polystyrene matrix (left to right).}
 	\label{fig:saxsps}
 \end{figure}
 \begin{figure}[tp]
@@ -104,7 +105,7 @@ The measurements do not show a clear and significant difference between the two 
 		\includegraphics[width=\linewidth]{images/pmma20.pdf}
 	\end{subfigure}
 	
-	\caption{SAXS profiles of nominal 5\,nm, 10\,nm and 20\,nm iron oxide nanoparticles in Poly-(EHMA/MMA) matrix (left to right).}
+	\caption[SAXS profile of iron oxide nanoparticles in  Poly-(EHMA/MMA) matrix]{SAXS profiles of nominal 5\,nm, 10\,nm and 20\,nm iron oxide nanoparticles in Poly-(EHMA/MMA) matrix (left to right).}
 	\label{fig:saxspmma}
 \end{figure}
 
@@ -148,7 +149,7 @@ An L-shaped aluminum plate was installed to reduce stray light as well as to all
 \subsubsection{Filtering}
 \subsection{Imaging Crystals}
 \subsubsection{Crystal orientation}
-For determining the relative orientation of the crystal with regards to the detector, Kossel lines as described in \fref{chap:kossel} can be used.  A semi-automatic alignment program was developed (\fref{fig:kosselfit}) and used the find the crystal orientation (\fref{tab:kosselfit}) As initial parameters, 5.65\,\AA\, lattice constant, 9.25\,keV energy and 800\,px detector distance and the result of a simple 2d cubic fit for the values of the translational shift were used. 
+For determining the relative orientation of the crystal with regards to the detector, Kossel lines as described in \fref{chap:kossel} can be used.  A semi-automatic alignment program was developed (\fref{fig:kosselfit}) and used the find the crystal orientation (\fref{tab:kosselfit}). As initial parameters, 5.65\,\AA\, lattice constant, 9.25\,keV energy and 800\,px detector distance and the result of a simple 2D cubic fit for the values of the translational shift were used. 
 \begin{figure}
 \centering
 \includegraphics[width=0.8\linewidth]{images/kosselfit.png}
