--- a/Tex/theory.tex
+++ b/Tex/theory.tex
@@ -12,48 +12,51 @@ random process
 ergodic: time average equals expectation value
 stationary: shifting all time instants by $\tau$ does not change the statistical description of the random process 
 
+
+
 \section{Coherence}
-Spherical waves as  solutions to wave equation
+
+
+Coherence
+
+
+Spherical waves as  solutions to scalar wave equation in spherical coordinates,
 \begin{equation}
 	E(\vec{r},t)=E_0(k,t) \frac{e^{i\vec{r}\vec{k}-iwt}}{R}
 	\end{equation}
-
-Superposition principle of the waves with the real amplitudes $A_{1,2}$ and phases $\phi{1,2}$
+describe light propagating isotropically. 
+Superposition principle of two waves with the real amplitudes $A_{1,2}$ and phases $\phi{1,2}$
 \begin{equation}
 E(\vec{r},t)=E_1(\vec{r},t)+E_2\vec{r},t)=A_1*e^{i\phi_1} * e^{i\vec{r}\vec{k_1}-iw_1t} + A_1*e^{i\phi_1} * e^{i\vec{r}\vec{k_2}-iw_2t} 
 \end{equation} 
 
-
-
-
-
-measured Intensity with measurement time $T\gg1/w$
+The measured Intensity with measurement time $T\gg1/w$ will be
 \begin{equation}
-	I(\vec{r},t)\propto \int_0^T \left|E(\vec{r},t)\right|^2 \diff t
+	I(\vec{r},t)\propto \int_0^T \left|E(\vec{r},t)\right|^2 \diff t .
 \end{equation}
-Consider monochromatic light
 
-Superposition of two monochromatic, stationary waves with a fixed phase difference $\Delta \phi$ gives rise to interference fringes
+The superposition of two monochromatic, stationary waves with a fixed phase difference $\Delta \phi$, such as a wave and its time delayed copy (\fref{fig:michelson}) in a Michelson interferometer, gives rise to interference fringes
 \begin{equation}
 	\left<I(\vec{r},t)\right>=I_1+I_2+2\sqrt{I_1I_2}\cos\left((\vec{k_1}-\vec{k_2})\vec{r}+\Delta \phi\right)
+\label{eq:interference}
 \end{equation}
 
 Defining the contrast of the fringes as the visibility $V$,
 \begin{equation}
-	V=\frac{I_{max}-I_{min}}{I_{max}+I_{min}}
+	V=\frac{I_{max}-I_{min}}{I_{max}+I_{min}} ,
 \end{equation} 
 
-Gives $V=\frac{2\sqrt{I*I}}{I+I}I=1$.
+it results for equal intensities of the the waves in maximum contrast,  $V=\frac{2\sqrt{I*I}}{I+I}I=1$. This case of a fixed phase difference is called coherent.
+If, on the other hand, the phase difference $\Delta \phi$ is not fixed but completly random and therefore averages out in \fref{eq:interference}, the visibility goes to 0 and the waves are regarded as incoherent.
 
-To consider non monochromatic waves we define self coherence function $\Gamma$ as 
+To consider non monochromatic waves, we define the self coherence function $\Gamma$ as 
 \begin{equation}
 \Gamma(\tau)=\left< E(t)E(t+\tau)\right>
 \end{equation}
-and its normalized version, the complex degree of coherence $\gamma$ as
+and its normalized version, the complex degree of coherence $\gamma$, as
 \begin{equation}
 \gamma(\tau)=\frac{\Gamma(\tau)}{\Gamma(0)} =  \frac{\Gamma(\tau)}{<I>}
 \end{equation}
-
 
 
 The coherence time is defined as 
@@ -68,7 +71,7 @@ The coherence time is defined as
 \paragraph{First order coherence $g_1$}
 Generalization of$\gamma$  for to different fields  $E_1^*(\vec{r}_1,t_1)$ and $E_2(\vec{r}_2,t_2)$ is $g_1$
 \begin{equation}
-	g^{(1)}(\vec{r}_1,t_1;\vec{r}_2,t_2= \frac
+	g^{(1)}(\vec{r}_1,t_1;\vec{r}_2,t_2)= \frac
 	{\left< E_1^*(\vec{r}_1,t_1)E_2(\vec{r}_2,t_2) \right>}
 	{\left[ \left<\left | E(\vec{r}_1,t_1)\right |^2 \right> \left< \left |E(\vec{r}_2,t_2)\right |^2 \right>\right]^{1/2}}	
 \end{equation}
@@ -134,7 +137,12 @@ For classical fields normalized correlations of intensities:
 \end{equation}
 
 \paragraph{Van Cittert Zernicke}
-
+The Van Cittert–Zernike theorem establishes that in the far field, the coherence function of a 
+quasi-monochromatic but spatially incoherent light source is proportional to the 2D Fourier transform intensity distribution of the source and Carter and Wolf introduced a generalization for three dimensional sources, showing that in the case of an completely incoherent source field, the complex degree of coherence is proportional to the 3D Fourier transform of the source's intensity distribution \cite{rosen1996, goodman200, carter1981}:
+\begin{equation}
+	g^{(1)}(\vec{r}_1,\vec{r}_2) \propto I_0^{-1} \int_{S} I_s(\vec{r}) \frac{e^{ik(R_1-R_2)}}{R_1 R_2} \difc \vec{r}
+\end{equation}
+with the source volume $S$ and intensity distribution $I_s$, total source intensity $I_0=\int I_s(\vec{r}) \difc \vec{r}$ and distances $R_{1,2}=\left|\vec{r}_{1,2}-\vec{r}\right|$. 
 %-Hanbury Brown and Twist
 \section{Hanburry Brown Twiss}
 Hanburry Brown and Twiss 
@@ -268,7 +276,7 @@ A sum of $M$ uncorrelated random variables following identical distributions giv
 p(I)=\frac{I^{M-1} e^{-I/\overline{I}}} {\overline{I}^M \Gamma(M)},
 \end{equation}
 for a positive integer $M$ this simplifies with $\Gamma(M)=(M-1)!$ to an Erlang distribution  \cite{forbes2010,trost2020}.
-If $I$ is  distributed as \ref{eq:gammadistr} and Poisson sampled as discrete $k$, it follows  an negative binomial distribution
+If $I$ is distributed like \fref{eq:gammadistr} and furthermore Poisson sampled as discrete $k$ (such as photon counts), it follows  an negative binomial distribution,
 \cite{trost2020,mandel1959,holmes2019}
 \begin{equation}
 p(k)=
@@ -279,14 +287,15 @@ p(k)=
 \right)^{-M}
 \end{equation}
 with mean $\mu=M\overline{I}$ and variance $\mu+\frac{\mu^2}{M}$ (which differs from the variance of a poisson distribution $\mu$).
-This probability distribution can be compared to an experimental measured intensity distribution and the number of modes present in the measurement can be estimated by a regression \cite{lehmkuhler2014,yun2019}.
+
+This probability distribution can be compared to an experimental measured photon count distribution and the number of modes present in the measurement can be estimated by a regression \cite{lehmkuhler2014,yun2019}.
+
 The variance of a product of (uncorrelated) photon counts  following this distribution will have a variance of
 \begin{equation}
 \Var_{p\cdot p}= \Var_p^2 +2 \mu^2\Var_p	= \mu^4 \frac{2 M + 1}{M^2 + 2}+ \mu^3 \frac{M+1}{M} + \mu^2 \,.
 \end{equation}
 
-Following the idea of Trost et. al, this can be used so estimate the noise of an intensity correlation measurement, even though the actual signal will break the assumption of having uncorrelated photon counts.
-
+Following the idea of Trost et. al, this can be used so estimate the noise of an intensity correlation measurement, even though the actual signal will break the assumption of having uncorrelated photon counts \cite{trost2020}.
 \begin{figure}
 \centering
 \includegraphics[width=0.6\linewidth]{images/modes.pdf}
