--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -32,7 +32,7 @@
 \usepackage[toc,page]{appendix} %um eine Titelseite "Anhang" vor dem eigentlichen Anhang einfügen zu können
 
 %Druckt den Hinweis "Entwurf" mit Datum auf jede Seite. Zum deaktivieren printwatermark=false setzen
-\usepackage[printwatermark=false]{xwatermark}
+\usepackage[printwatermark=true]{xwatermark}
 \newwatermark[allpages,textcolor=gray!70,angle=0,xpos=68,ypos=-135,fontsize=14pt,fontfamily=phv]{Entwurf\ -\ \the\day.\the\month.\the\year}
 
 %multirow in tabellen
@@ -273,7 +273,7 @@
 	\acro{IDI}{Incoherent Diffractive Imaging}
 	\acro{DoC}{Degree of Coherence}
 	\acro{HBT}{Hanburry Brown Twiss}
-	acro{NP}{Nanoparticle}
+	\acro{NP}{Nano particle}
 	\acro{PS}{Polystyrene}
 	\acro{MMA}{Methylmethacrylate}
 	\acro{EHMA}{Etyhlhexymethacrylate}
