--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -1,6 +1,9 @@
 \chapter{Experimental Verification}
-
+An initial experimental proof of principle experiment was performed at the SACLA FEL.
+The experiments consisted of three parts: First, reproducing XXX and imaging projection of the focal volume of the FEL by using metal foils as samples, performing a measurement of the K$\alpha$  fluorescence and an reconstruction in the small angle regime. Second, moving the a smaller length scale and try to image nanoparticles. And Third, leaving the small angle regime and record the fluoresccne of a single crystal and perform a reciprocal space reconstruction.
 \section{Sample Preparation}
+As an nanoparticle sample, spherical iron oxide nanoparticles where chosen. To improve the number of detected fluorescence photons per FEL shot, the decision was made to have many particles many for each shot within the focus. This ensures a higher number of fluorescence photons recorded and basically eliminates the possibility of having shots without any particles inside the focus. 
+
 Magnetite Nanoparticles coated with Oleic Acid dispersed in Toluene were bought from NN-Labs, inhibited Methylmethacrylate (MMA) and Etyhlhexylmethacrylate (EHMA)  (Sigma Aldrich) were filtered using a prefilled column to remove the Inhibitor,  2,2-azo-bis-isobutyrylnitrile (AIBN) (Sigma Aldrich) was used as thermally activated radical initiator as received. Polystyrene (Sigma Aldrich, MW XXX) was used as received. As solvents, Methanol, Toluene and Chloroform were used.
 \subsection{Nanoparticles in Polystyrene Matrix}
 The nanoparticles were precipitated with Methanol, centrifuged and redispersed in Chloroform at a concentration of 25\,mg/ml, whereas the weight of nanoparticles includes the weight of the oleic acid capping. Polystyrene was dissolved in Chloroform at a concentration of 250\,mg/ml and different volumes of the nanoparticles solution were added (to account for the different iron contents) to 5\,ml of the Polystyrene solution (see \fref{tab:samplePS}). After ensuring dispersion by strong sonication, fractions of XXX\,ul the solution were dropped onto glass slides and dried. After drying, the approximately 200\,um thick films were carefully removed from the glass slides.
@@ -126,20 +129,18 @@ Using MOCVD, 50\,nm GaAs, 400\,nm AlGaAs as an etch stop and finally a 5\,um GaA
 \section{Setup}
 The setup used at EH5 at SACLA is shown in \fref{fig:setup}. 
 
-The sample was mounted on an XXX axis stage to allow scanning perpendicular the the incoming beam, ensure perpendicularly of the scanning directions to the beam while ensuring a parallel alignment of the sample surface to the octal detector.
-
-Two MPCCD detectors were used: A dual detector with two tiles, each 512x1024 pixels perpendicular to the FEL beam in a distance of 1\,m and a Short Working Distance octal detector, consisting of eight 512x1024 tiles, parallel to the sample surface in a distance $d_{octal}$ ranging from XXX to XXX cm.
-
-An L-shaped aluminum plate was installed to reduce stray light as well as to allow mounting of the beamstop and filters between sample and detector.
+The sample was mounted in an XXX angle to the beam on an XXX axis stage to allow scanning of the sample, ensure perpendicularly of the scanning directions to the beam to stay within the Rayleigh length of approx. XXX\,um while also ensuring a parallel alignment of the sample surface to one of the detectors. Overall, two MPCCD detectors were used: A Dual detector with two tiles, each 512x1024 pixels perpendicular to the FEL beam in a distance of 1\,m and a Short Working Distance Octal detector, consisting of eight 512x1024 tiles, parallel to the sample surface in a distance $d_{octal}$ ranging from XXX to XXX cm. To supress absorption and more importantly, air scattering, a vacuum pipe with Kapton windows was installed in between the sample and the Dual detector
+An L-shaped aluminum plate was installed to reduce stray light as well as to allow mounting of the beamstop and filters to suppress coherent scattering and K$\beta$ fluorescence and between sample and detector.
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{images/setup.pdf}
 	\caption[Experimental setup at SACLA]{Experimental setup at SACLA: The sample is mounted on a scanning stage and aligned to stay in focus during the scan and be parallel to the Octal MPCCD detector, which is in a distance $d_{octal}$. The angle between incoming FEL and Sample is XXX. Behind the sample, a stray light filter, beamstop and (depending on the sample) a filter foil is installed. The Dual detector is mounted $d_{dual}$=1\,m away from the sample in a XXX angle. To reduce air scattering, a vacuum tube is installed in the path from sample to Dual.}
 	\label{fig:setup}
 \end{figure}
-\subsection{Imaging the Focus}
-\subsection{Imaging Nanoparticles}
-\subsection{Imaging Crystals}
+\paragraph{Imaging the Focus}
+The image to focus, 
+\paragraph{Imaging Nanoparticles}
+\paragraph{Imaging Crystals}
 
 \section{Results}
 \subsection{Imaging the Focus}
