--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -63,6 +63,11 @@
 %%\patchcmd{\@makeschapterhead}{\vspace*{50\p@}}{}{}{}% Removes space above \chapter* head
 %\makeatother
 
+
+%algorithmcx
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+
 %abstände
 \usepackage{titlesec}
 \titlespacing\section{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
